--- a/aip.tex
+++ b/aip.tex
@@ -1227,7 +1227,8 @@ Below, we adopt the notation established in \Cref{collapse: D}, and we use an ov
 
 \daniel[inline]{I updated the following remark, elevated it to a lemma.}
 \pedro[inline]{
-   I combined the lemma with part of the old  \Cref{faces under collapsing: P}, that I thought would fit better here.
+   The remark/lemma stated that collapses of monomial pairs are monomial pairs.
+   The less trivial part of it---that collapses of monomial matrices along standard faces are monomial matrices---is now in the following proposition, along with part of the old  \Cref{faces under collapsing: P}, that I thought would fit better here.
 }
 
 \begin{proposition}[Collapse of a Newton polyhedron]
@@ -1289,7 +1290,7 @@ Below, we adopt the notation established in \Cref{collapse: D}, and we use an ov
 \end{proof}
 
 \pedro[inline]{
-   I separated the following from the previous proposition, as it was too buried in a very long statement.
+   I separated the following from the previous proposition, as it was buried too deep in a very long statement.
 }
 
 Taking $\G = \O$ in \Cref{faces under collapsing: P}(1), we see that $\collapse{\O}$ is a face of $\N$ defined by a positive point, which gives us the following corollary.
