--- a/preamble.tex
+++ b/preamble.tex
@@ -158,6 +158,7 @@ vlined]{algorithm2e}
 \renewcommand{\L}{\mathcal{L}}
 \newcommand{\G}{\mathcal{G}}
 \renewcommand{\H}{\mathcal{H}}
+\renewcommand{\P}{\mathcal{P}}
 \newcommand{\Z}{\mathcal{Z}}
 
 % newly-defined commands
